kubernetes/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: iams-production
  labels:
    name: iams-production
    environment: production
    app: iams
